fix: type error in slacklistsitemsinfo text block